# hy-mt-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: build.yml
apps/: hymt_cli.cc  hymt_repl.cc
bindings/android/: CMakeLists.txt  Translator.kt  jni_bridge.cc
bindings/ios/: HymtBridge.h
docs/: 2bit-model.md  roadmap.md
include/hymt/: c_api.h  translator.h
scripts/: bench.sh  download_model.sh
src/: c_api.cc  prompt.cc  prompt.h  translator.cc
