cmake_minimum_required(VERSION 3.18)
project(hymt_android LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(HYMT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
set(HYMT_BUILD_CLI OFF CACHE BOOL "" FORCE)
set(HYMT_BUILD_C_API ON CACHE BOOL "" FORCE)
add_subdirectory("${HYMT_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}/hymt-core")
add_library(hymt_jni SHARED jni_bridge.cc)
target_link_libraries(hymt_jni PRIVATE hymt_c log)
target_include_directories(hymt_jni PRIVATE "${HYMT_ROOT}/include")
